--- a/css/popup.css
+++ b/css/popup.css
@@ -76,20 +76,32 @@
         /* White title color */
         margin-bottom: 10px;
     }
+    
+    #popupTitle,
+    .popupDescription {
+        text-align: left;
+    }
     /* Style the popup description */
     
-    #popupDescription {
-        font-size: 18px;
-        color: #ffffff;
-        /* White text color */
-        line-height: 1.6;
-        margin-bottom: 20px;
+    .popupDescription {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    
+    .popupDescription:hover {
+        max-height: none;
+        /* Display full content on hover */
+        overflow: auto;
+        /* Add a scrollbar if necessary */
     }
     /* Style the popup image */
     
     #popupImage {
         max-width: 100%;
-        height: 500px;
+        width: 700px;
+        /* Adjust the width as needed */
+        height: 400px;
+        /* Automatically adjust the height */
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
