--- a/css/services.css
+++ b/css/services.css
@@ -86,9 +86,25 @@
 
 @media screen and (max-width: 767px) {
     .services h2 {
-        font-size: 36px;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .services-content {
+        flex-direction: column;
+        align-items: center;
     }
     .service {
         max-width: 100%;
+        width: 80%;
+        /* Adjust as needed */
+        margin: 10px 0;
+    }
+    .service h3 {
+        font-size: 20px;
+        margin-bottom: 5px;
+    }
+    .service p {
+        font-size: 14px;
+        line-height: 1.4;
     }
 }
